=== 1.1.0 2012-05-02

* Streamlined syntax for unit/operation extension
  * Replace MathViz::Unit#binop with MathViz::Unit#binary_operator, or use the new shorthand syntax MathViz#binop
* When/Given/Then comment methods can set up default-to-input mode
* Print output filename
* Tax example

=== 1.0.2 2010-09-04

* Set variable names as strings intead of symbols

=== 1.0.1 2010-09-04

* Syntax and path updates for 1.9.2
* Remove explicit rubygems require

=== 1.0.0 2009-12-23

* Rename from MatLat to MathViz
* Default output file name
* Add rdoc comments and examples
* Package as gem
* Included classes/modules under MathViz namespace

=== 0.1.0 2009-12-18

* Support unit tracking
* Unary operators
* Moved operator out of box

=== 0.0.1 2009-02-12

* Generate Graphs
* Track values