@@ -4,6 +4,7 @@
   * Replace MathViz::Unit#binop with MathViz::Unit#binary_operator, or use the new shorthand syntax MathViz#binop
 * When/Given/Then comment methods can set up default-to-input mode
 * Print output filename
+* Namespaced modules for extensions to core classes
 * Tax example
 
 === 1.0.2 2010-09-04
